# rust-indicators

./: .gitignore  Cargo.toml  README.md  TODO.md  build.py  classifier_model_example.rs  config.toml  justfile  pattern_model_example.rs  pyproject.toml  test_hilbert_transform.py  test_supersmoother.py
.cargo/: config.toml
.github/workflows/: docs.yml
docs/: Advances in Financial Machine Learning - Lopez de Prado, Marcos.txt  Cycle Analytics for Traders - John F. Ehlers.txt  advanced_cross_validation_architecture.md  advanced_cross_validation_integration_guide.md  phase4_architecture.md  phase4_integration_guide.md
examples/: advanced_cross_validation_example.rs  bars_example.rs  pattern_classifier_example.py  phase3_example.rs  phase4_example.rs  stationarity_example.rs  test_backend_selection.rs  trading_classifier_example.py  unified_classifier_example.py
notebooks/: adaptive_benchmark.ipynb  backend_validation.ipynb  simple_vpin_benchmark.ipynb  vpin_analysis.ipynb
src/: backend.rs  backend_cpu.rs  backend_gpu.rs  cpu_impls.rs  features.rs  gpu_impls.rs  indicators.rs  lib.rs  test_utils.rs  vpin_kernel.rs
src/backends/: mod.rs
src/backends/adaptive/: mod.rs
src/backends/cpu/: backend.rs  implementations.rs  ml_backend.rs  mod.rs
src/backends/gpu/: backend.rs  implementations.rs  indicator_kernels.rs  indicators_impl.rs  memory.rs  ml_impl.rs  ml_kernels.rs  mod.rs  partial_gpu_backend.rs
src/config/: gpu_config.rs  mod.rs
src/core/: bar.rs  financial_series.rs  fractional_differentiation.rs  meta_labeling.rs  mod.rs  stationarity_tests.rs  traits.rs  triple_barrier.rs
src/features/: api.rs  mod.rs
src/financial/: bars.rs  fractional_diff.rs  mod.rs  series.rs  stationarity.rs
src/indicators/: api.rs  mod.rs
src/ml/: mod.rs  model.rs  traits.rs
src/ml/components/: advanced_cross_validation_integration.rs  cross_validation.rs  error_handling.rs  label_generation.rs  memory_optimization.rs  mod.rs  overfitting_detection.rs  phase4_integration.rs  prediction.rs  sample_weighting.rs  validation_utils.rs
src/ml/models/: mod.rs  pattern_classifier.rs  trading_classifier.rs  unified_classifier.rs
src/utils/: backend_selection.rs  benchmarking.rs  gpu_validation.rs  macros.rs  mod.rs  performance.rs  testing.rs
tests/: backend_selection_tests.rs  bars_tests.rs  combinatorial_cv_tests.rs  financial_series_tests.rs  gpu_backend_tests.rs  ml_components_tests.rs  no_gpu_tests.rs
