# File: rust_indicators/Cargo.toml
[package]
name = "rust_indicators"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_indicators"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.13"
pyo3 = { version = "0.25", features = ["extension-module"] }
numpy = "0.25"
yata = "0.6"  # Yet Another Technical Analysis
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
rand = "0.8"  # For random data generation in tests


# Memory allocator for better performance - marked as optional
mimalloc = { version = "0.1", default-features = false, optional = true }

# Performance optimizations
[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary size
strip = true         # Remove debug symbols

[features]
default = ["mimalloc"]

# For development with better error messages
[profile.dev]
debug = true
panic = "unwind"