# File: rust_indicators/Cargo.toml
[package]
name = "rust_indicators"
version = "0.1.3"
edition = "2021"

[lib]
name = "rust_indicators"
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.13"
pyo3 = { version = "0.25" }
numpy = "0.25"
yata = "0.6"  # Yet Another Technical Analysis
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
rand = "0.8"  # For random data generation in tests

# GPU/CUDA dependencies - optional for GPU acceleration
cubecl = { version = "0.2", optional = true }
cubecl-wgpu = { version = "0.2", optional = true }
cubecl-cuda = { version = "0.2", optional = true }

# Memory allocator for better performance - marked as optional
mimalloc = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
rstest = "0.18"

# Performance optimizations
[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary size
strip = true         # Remove debug symbols

[features]
default = ["mimalloc"]
gpu = ["cubecl/wgpu", "cubecl-wgpu"]
cuda = ["gpu", "cubecl/cuda", "cubecl-cuda"]

# For development with better error messages
[profile.dev]
debug = true
panic = "unwind"

# Fix test isolation issues by running tests sequentially
[profile.test]
debug = true

# Ensure tests run sequentially to avoid environment variable conflicts
[[test]]
name = "backend_selection_tests"
harness = true
test = true

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    ".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
]
